--- a/packages/vue/examples/search-showcase/featured-suggestions/index.html
+++ b/packages/vue/examples/search-showcase/featured-suggestions/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vue.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vue-search-pill-suggestions</title>
+    <title>vue-search-showcase-featured-suggestions</title>
   </head>
   <body>
     <div id="app"></div>
